Permalinks no longer make the line below jump. This is done by using css visibility property as opposed to display none / block

--- a/css/docpage.css
+++ b/css/docpage.css
@@ -330,6 +330,9 @@ span.expand.show, span.contract.show {
   font-size: 70%;
   color: #1A6BC7;
 }
+.permalink.hide {
+  visibility: hidden;
+}
 /****************************
 /* Responsive media queries
 /***************************/
